Completed Search Page.

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -5,6 +5,8 @@
         android:label="interview_demo"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
+        <meta-data android:name="com.google.android.geo.API_KEY"
+               android:value="AIzaSyDuXBk6XHQDCNNe6ZbNr17Ba2qzQdveGD4"/>
         <activity
             android:name=".MainActivity"
             android:exported="true"
